* Bug fix: Fixed 'Data settings' table when there are many columns by adding a   bottom scrollbar   [voineali refs #5363]

--- a/eea/app/visualization/browser/css/edit.css
+++ b/eea/app/visualization/browser/css/edit.css
@@ -340,3 +340,8 @@ dl.portalMessage dd {
   background-color: #777c1f;
   color: #fff;
 }
+
+.daviz-data-table {
+  width: 100%;
+  overflow: auto;
+}
